# Better-Discovery

./: .gitignore  MT5_SETUP.md  NOTES_FOR_USER.md  README.md  index.html  package-lock.json  package.json  postcss.config.js  release.ps1  setup_embedded_python.ps1  setup_updater_key.ps1  tailwind.config.ts  tsconfig.json  vite.config.ts
.codex/: config.toml
.github/workflows/: release.yml  validate.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  external_data.py  main.py  paths.py
backend/ea/: PatternDiscoveryEA.mq5
backend/mt5/: README.md
backend/tests/: conftest.py  test_ai_review.py  test_discovery_fidelity.py  test_external_data.py  test_features.py  test_hypothesis.py  test_hypothesis_to_mql.py  test_library.py  test_local_replay.py  test_local_robustness.py  test_market_data.py  test_mc_calendar_days.py  test_onnx_filter.py  test_research_mcp_tools.py  test_research_orchestrator.py  test_smoke.py  (+3 more)
docs/: AI_REVIEW.md  AUTONOMOUS_RESEARCH_PROMPT.md  DISCOVERY_FIDELITY_AUDIT.md  EDGE_GPU_OPTIMIZATION.md  MT5_EA_COMPILE.md  ONNX_FILTER.md  RESEARCH_ORCHESTRATOR.md  ROADMAP.md  STRATEGY_DEVELOPMENT_BACKLOG.md  TEST_PLAN.md  feature_edge_research.md  reproducibility_check.md
scripts/: bump-version.mjs  check_reproducibility.py  dev.ps1  download_xauusd_dukascopy_first_batch.py  install_backend_deps.ps1  start-research-mcp.ps1
src/: App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ipc.rs  main.rs  paths.rs  sidecar.rs  windows.rs
(+140 files in other folders)
